Benchmarks comparing JNA, JNR, and Slinc added.